# tree-sitter-combinator

./: Cargo.toml  LICENSE  README.md
src/: combinators.rs  constructors.rs  handler.rs  input.rs  lib.rs  predicates.rs  query.rs  tests.rs  traversal.rs
src/combinators/: and_then.rs  boxed.rs  climb.rs  find_ancestor.rs  for_children.rs  map.rs  or.rs  when.rs
src/tests/: ancestor_and_children.rs  basic.rs  integration.rs  traversal.rs
