[package]
name = "tree-sitter-utils"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/cubewhy/tree-sitter-utils"
description = "Composable, parser-combinator-style abstraction over tree-sitter node dispatch"
license = "MIT"

[dependencies]
tree-sitter = "0.26"

[dev-dependencies]
tree-sitter-python = "0.25"
